--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,29 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Aula06/bin/Debug/net9.0/Aula06.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Aula06",
+            // For more information about the 'web' field, see https://aka.ms/VSCode-CS-LaunchJson-Web
+            "webRoot": "${workspaceFolder}/Aula06",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Aula06/Views"
+            }
+        },
+        {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
